--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -4,8 +4,7 @@
 @import "base/mixins";
 
 // Подключение шрифтов =================================================================================================================================================================================
-@import url(https://fonts.googleapis.com/css?family=Rubik:300,regular,700&display=swap);
-@import url(https://fonts.googleapis.com/css?family=Raleway:700,800&display=swap);
+@import url("https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap");
 
 //&display=swap - добавить при подключении через плагин
 
@@ -17,11 +16,11 @@
 @import "fonts/icons";
 
 // Шрифт по умолчанию =================================================================================================================================================================================
-$fontFamily: "Gilroy";
+$fontFamily: "Ubuntu";
 $fontSize: rem(16); // где 16(px) - размер шрифта по умолчанию из макета
 
 // Основные цвета
-$mainColor: #3a3a3A; // Цвет шрифта по умолчанию
+$mainColor: #3a3a3a; // Цвет шрифта по умолчанию
 $orangeColoor: #e89f71;
 $grayColor: #898989;
 $darkGreyColor: #616161;
@@ -30,7 +29,7 @@ $darkGreyColor: #616161;
 // Минимальная ширина страницы
 $minWidth: 320;
 // Ширина полотна (макета)
-$maxWidth: 1440;
+$maxWidth: 1290;
 // Ширина ограничивающего контейнера (0 = нет ограничения)
 $maxWidthContainer: 1240;
 // Общий отступ у контейнера
@@ -42,10 +41,10 @@ $md3: 767.98;
 $md4: 479.98;
 
 // Ширина срабатывания первого брейкпоинта
-// $containerWidth: $maxWidthContainer + $containerPadding;
+$containerWidth: $maxWidthContainer + $containerPadding;
 
 // Брейк-поинты
-// $pc: em($containerWidth); // ПК, ноутбуки, некоторые планшеты в горизонтальном положении
+$pc: em($containerWidth); // ПК, ноутбуки, некоторые планшеты в горизонтальном положении
 // $tablet: em(991.98); // Планшеты, некоторые телефоны в горизонтальном положении
 // $mobile: em(767.98); // Телефоны L
 // $mobileSmall: em(479.98); // Телефоны S
@@ -59,7 +58,7 @@ $responsiveType: 1;
 @import "base/null";
 
 body {
-	background: #F9F1E7;
+	// background: #F9F1E7;
 	// Скролл заблокирован
 	.lock & {
 		overflow: hidden;
@@ -105,8 +104,7 @@ body {
 		}
 	}
 } @else {
-	По брейк-поинтам
-	[class*="__container"] {
+	По брейк-поинтам [class*="__container"] {
 		margin: 0 auto;
 		@if ($maxWidthContainer>0) {
 			max-width: rem($maxWidthContainer);
@@ -133,31 +131,47 @@ body {
 
 //? Стили для отзывчивых картинок (IBG) ==================================================================================================================================
 // Сниппет (HTML): ibg (div c картинкой и классами)
-[class*=ibg] {
-	position: relative;
+[class*="ibg"] {
+	// position: relative;
+	// img {
+	// 	position: absolute;
+	// 	width: 100%;
+	// 	height: 100%;
+	// 	top: 0;
+	// 	left: 0;
+	// 	object-fit: cover;
+	// }
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: center;
 	img {
-		position: absolute;
-		width: 100%;
-		height: 100%;
-		top: 0;
-		left: 0;
-		object-fit: cover;
+		display: none;
 	}
 }
-[class*=ibg_contain] {
+[class*="ibg_contain"] {
 	img {
 		object-fit: contain;
 	}
 }
 //? =====================================================================================================================================================================
- 
-[class*=form-input]{
-	input:focus{ 
-		&::-webkit-input-placeholder{color: transparent;};
-		&::-moz-placeholder{ color:transparent};
-		&:-moz-placeholder{ color:transparent};
-		&:-ms-input-placeholde{ color:transparent};
-		&{outline: none;}
+
+[class*="form-input"] {
+	input:focus {
+		&::-webkit-input-placeholder {
+			color: transparent;
+		}
+		&::-moz-placeholder {
+			color: transparent;
+		}
+		&:-moz-placeholder {
+			color: transparent;
+		}
+		&:-ms-input-placeholde {
+			color: transparent;
+		}
+		& {
+			outline: none;
+		}
 	}
 }
 // Подключение базовых стилей, шаблонов (заготовок) и вспомогательных  классов
@@ -174,3 +188,28 @@ body {
 
 // Подключение стилей отдельных страниц
 @import "home";
+
+.pade {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	display: flex;
+	flex-direction: column;
+	// .pade__bottom
+	&__bottom {
+	}
+}
+.main-screen {
+	flex: 1 0 100%;
+	position: relative;
+	// .main-screen__bg
+	&__bg {
+		position: absolute;
+		width: 100%;
+		height: 100%;
+		top: 0;
+		left: 0;
+	}
+}
